--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<!-- <mat-toolbar color="primary">
   <button
     mat-icon-button
     class="example-icon"
@@ -26,28 +26,28 @@
 
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" matSort>
-        <!-- ID Column -->
+        ID Column
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
           <td mat-cell *matCellDef="let row">{{ row.id }}</td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- Progress Column -->
-        <ng-container matColumnDef="name">
+        <!-- <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Product Name
           </th>
           <td mat-cell *matCellDef="let row">{{ row.name | lowercase }}</td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- Name Column -->
-        <ng-container matColumnDef="category">
+        <!-- <ng-container matColumnDef="category">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
           <td mat-cell *matCellDef="let row">{{ row.category }}</td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- Fruit Column -->
-        <ng-container matColumnDef="freshness">
+        <!-- <ng-container matColumnDef="freshness">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Freshness</th>
           <td mat-cell *matCellDef="let row">{{ row.freshness }}</td>
         </ng-container>
@@ -73,17 +73,17 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
           <td mat-cell *matCellDef="let row">
-            <button mat-icon-button color="warn" (click)="deleteProduct($event,row.id)"><mat-icon>delete</mat-icon></button>
+            <button mat-icon-button color="warn" (click)="deleteProduct($event,row.id)"><mat-icon>delete</mat-icon></button> -->
             <!-- <button mat-icon-button color="primary" (click)="viewProduct(row.id)"><mat-icon>remove_red_eye</mat-icon></button> -->
-            <button mat-icon-button color="primary" (click)="editProductDetails($event,row)"><mat-icon>edit</mat-icon></button>
+            <!-- <button mat-icon-button color="primary" (click)="editProductDetails($event,row)"><mat-icon>edit</mat-icon></button>
           </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"(click)='demo(row)'></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"(click)='demo(row)'></tr> -->
 
         <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
+        <!-- <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="7">
             No data matching the filter "{{ input.value }}"
           </td>
@@ -98,6 +98,6 @@
 
     
   </div>
-</div>
+</div> --> 
 
 <router-outlet></router-outlet>
