--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -16,7 +16,7 @@
     <p>Price:{{productDetails.price}}</p>
   
    <p>Date:{{productDetails.date|date}}</p>
-   <button mat-raised-button [routerLink]="['/']" color ="warn">Cancel</button>
+   <button mat-raised-button [routerLink]="['/dashboard/list']" color ="warn">Cancel</button>
 
   
   </div>
