--- a/src/app/product/product-dilog/product-dilog.component.html
+++ b/src/app/product/product-dilog/product-dilog.component.html
@@ -147,6 +147,6 @@
     >
       {{ butoonName }}
     </button>
-    <button mat-raised-button [routerLink]="['/']" color="warn">Cancel</button>
+    <button mat-raised-button [routerLink]="['/dashboard/list']" color="warn">Cancel</button>
   </div>
 </div>
