--- a/src/app/product/side-nav/side-nav.component.scss
+++ b/src/app/product/side-nav/side-nav.component.scss
@@ -14,3 +14,15 @@ margin-top: 10px;
     margin-top: 10px;
     width: 2.6cm;
   }
+  .anchor{
+    margin-top: 10px;
+    margin-left: 5px;
+  }
+  .dashboard{
+    margin-left: 20%;
+width:60%
+  }
+
+  .example-spacer {
+    flex: 1 1 auto;
+  }
