--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -60,14 +60,14 @@
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
             <td mat-cell *matCellDef="let row">
-              <button mat-icon-button color="warn" (click)="deleteProduct($event,row.id)"><mat-icon>delete</mat-icon></button>
+              <button mat-icon-button color="warn" (click)="deleteProduct($event,row?.id)"><mat-icon>delete</mat-icon></button>
               <!-- <button mat-icon-button color="primary" (click)="viewProduct(row.id)"><mat-icon>remove_red_eye</mat-icon></button> -->
               <button mat-icon-button color="primary" (click)="editProductDetails($event,row)"><mat-icon>edit</mat-icon></button>
             </td>
           </ng-container>
   
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"(click)='demo(row)'></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"(click)='productDetail(row)'></tr>
   
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
